# basic-auth-rs

./: .gitignore  Cargo.toml  PROJECT_STRUCTURE.md  README.md
config/: diesel.toml  docker-compose.yml
deployments/docker/dev/: Dockerfile.dev
deployments/docker/prod/: Dockerfile.prod
deployments/kubernetes/: deployment.yaml
docs/: ALTERNATIVE_STRUCTURES.md  AUTHENTICATION_SCHEMA_GUIDE.md  FOLDER_STRUCTURE.md  IDIOMATIC_RUST_GUIDE.md  SECURITY_GUIDE.md  complete_rust_idiomatic_guide.md  idiomatic_rust_complete_guide.md
docs/api/: openapi.yaml
docs/architecture/: ARCHITECTURE.md
migrations/2025-06-27-065731_create_users/: up.sql
migrations/2025-07-01-090351_create_complex_auth_schema/: down.sql  up.sql
scripts/: generate_api_docs.sh  setup_db.sh
src/: lib.rs  main.rs
src/application/dtos/: auth_dto.rs
src/application/ports/: token_port.rs
src/common/: mod.rs
src/common/errors/: mod.rs
src/common/logging/: mod.rs
src/common/models/: mod.rs  response.rs
src/common/utils/: mod.rs
src/config/: database.rs
src/domain/aggregates/: user_aggregate.rs
src/domain/entities/: user.rs
src/domain/errors/: domain_error.rs
src/domain/repositories/: user_repository.rs
src/domain/services/: authentication_service.rs  user_service.rs
src/domain/value_objects/: email.rs
src/infrastructure/config/: dependency_injection.rs  mod.rs
src/infrastructure/persistence/: schema.rs
src/infrastructure/security/: jwt_provider.rs  password_hasher.rs
src/utils/: errors.rs
tests/e2e/: auth_flow_tests.rs
tests/integration/: repository_tests.rs
(+16 files in other folders)
