[package]
name = "basic-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-web-httpauth = "0.7.0"
diesel = { version = "2.2.11", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
json = "0.12.4"
env_logger = "0.11.8"
thiserror = "2.0.12"